--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -276,9 +276,15 @@ postgrest_account_history_benchmark_tests:
     APP_IMAGE: $HAFAH_IMAGE_NAME
 
 publish_image:
+  stage: publish
   extends: .docker_image_builder_job
   needs:
     - job: prepare_postgrest_hafah_image
       artifacts: true
   script:
     - scripts/publish_images.sh
+  tags:
+    - public-runner-docker  
+  rules:
+    - if: '$CI_COMMIT_TAG && $CI_COMMIT_REF_PROTECTED == "true"'
+      when: manual
