--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,15 +23,17 @@ variables:
   # Variables specific to runner (there is runner cache and there is 5m block_log available)
   DATA_CACHE_HIVE: /cache/replay_data_hafah_hived_${CI_PIPELINE_ID}
   DATA_CACHE_HAF: /cache/replay_data_hafah_haf_${CI_PIPELINE_ID}
+  DATA_CACHE_HAF_MIRRORNET: /cache/replay_data_hafah_haf_mirrornet_${CI_PIPELINE_ID}
   BLOCK_LOG_SOURCE_DIR_5M: /blockchain/block_log_5m
+  BLOCK_LOG_SOURCE_DIR_MIRRORNET_5M: /blockchain/block_log_5m_mirrornet
 
 include:
   - template: Workflows/Branch-Pipelines.gitlab-ci.yml
   - project: 'hive/haf'
-    ref: ms_setup_ci_using_cache # after merging ms_setup_ci_using_cache use commit hash
+    ref: ms_setup_ci_using_cache_with_mirrornet # after merging ms_setup_ci_using_cache use commit hash
     file: '/scripts/ci-helpers/prepare_data_image_job.yml'
   - project: 'hive/hive'
-    ref: ms_add_anchor_for_common_gitlab_job_definition # after merging ms_setup_ci_using_cache use commit hash
+    ref: ms_setup_ci_using_cache_with_mirrornet # after merging ms_setup_ci_using_cache use commit hash
     file: '/scripts/ci-helpers/prepare_data_image_job.yml'
   - project: 'hive/common-ci-configuration'
     ref: aef66465837540ec59f549f24760d6f70399d633 # It seems a variable cannot be used here
@@ -86,6 +88,35 @@ prepare_haf_data:
     DATA_CACHE: $DATA_CACHE_HAF
     BLOCK_LOG_SOURCE_DIR: $BLOCK_LOG_SOURCE_DIR_5M
     CONFIG_INI_SOURCE: "$CI_PROJECT_DIR/haf/docker/config_5M.ini"
+  tags:
+    - hive-builder-4
+
+prepare_haf_image_mirrornet:
+  extends: .prepare_haf_image
+  stage: build
+  variables:
+    SUBMODULE_DIR: "$CI_PROJECT_DIR/haf"
+    REGISTRY_USER: "$CI_IMG_BUILDER_USER"
+    REGISTRY_PASS: $CI_IMG_BUILDER_PASSWORD
+    HIVE_NETWORK_TYPE: mirrornet
+    BINARY_CACHE_PATH: "hived-mirrornet-binaries"
+
+  tags:
+    - public-runner-docker
+    - hived-for-tests
+
+prepare_haf_data_mirrornet:
+  extends: .prepare_haf_data_5m
+  needs:
+    - job: prepare_haf_image_mirrornet
+      artifacts: true
+  stage: build
+  variables:
+    SUBMODULE_DIR: "$CI_PROJECT_DIR/haf"
+    DATA_CACHE: $DATA_CACHE_HAF_MIRRORNET
+    BLOCK_LOG_SOURCE_DIR: $BLOCK_LOG_SOURCE_DIR_MIRRORNET_5M
+    CONFIG_INI_SOURCE: "$CI_PROJECT_DIR/haf/docker/config_mirrornet_5M.ini"
+    FAKETIME_TIMESTAMP: "2016-09-15T19:47:21"
   tags:
     - hive-builder-4
 
@@ -376,3 +407,111 @@ cleanup_hived_cache_manual:
   resource_group: ${CI_COMMIT_SHA}
   tags:
     - hive-builder-4
+
+.live_sync_tests:
+  extends: .pattern_tests_template
+  image: "registry.gitlab.syncad.com/hive/haf/ci-base-image@sha256:c3bfeee205b5ffffa3b5c5b1a4ebff19d1d15afe1e6d5f73efc2fd4a5d6dd632"
+  stage: test
+  variables:
+    FF_NETWORK_PER_BUILD: 1
+    PYTHONPATH: "$CI_PROJECT_DIR/tests/test-tools/package"
+    APP_IMAGE: ""
+    BINARY_CACHE_PATH: "hived-mirrornet-binaries"
+    CLI_WALLET_PATH: "$CI_PROJECT_DIR/$BINARY_CACHE_PATH/cli_wallet"
+    HIVED_HTTP_ENDPOINT: haf-instance:8090
+    HIVED_WS_ENDPOINT: haf-instance:8091
+    ENDPOINT: app:$APP_PORT
+  needs:
+    - job: prepare_haf_image_mirrornet
+      artifacts: true
+    - job: prepare_haf_data_mirrornet
+
+  services:
+    - name: $HAF_IMAGE_NAME
+      alias: haf-instance
+      variables:
+        # Allow access from any network to eliminate CI IP addressing problems
+        PG_ACCESS: "host    haf_block_log    haf_app_admin    0.0.0.0/0    trust"
+        DATADIR: $DATA_CACHE_HAF_MIRRORNET/datadir
+        SHM_DIR: $DATA_CACHE_HAF_MIRRORNET/shm_dir
+        LOG_FILE: $CI_JOB_NAME.log
+      command: ["--replay-blockchain"]
+    - name: $APP_IMAGE
+      alias: app
+
+  before_script:
+      - set -x
+      - pip3 install -r $CI_PROJECT_DIR/haf/hive/tests/api_tests/comparsion_tests/requirements.txt
+      - export USER=$(whoami)
+      - export PATH="/home/$USER/.local/bin:$PATH"
+      - curl -sSL https://install.python-poetry.org | python3 -  # install poetry in isolated environment
+      - python3 -m venv venv/
+      - . venv/bin/activate
+      - (cd $CI_PROJECT_DIR/haf/tests/integration/haf-local-tools && poetry install)
+      - env
+      - sudo -n apt install -y curl
+      - |
+          curl -XPOST -d '{
+          "jsonrpc": "2.0",
+          "method": "database_api.get_dynamic_global_properties",
+          "params": {
+          },
+          "id": 2
+          }' haf-instance:8090 || true
+      - sleep 60 || true
+      - |
+          curl -XPOST -d '{
+          "jsonrpc": "2.0",
+          "method": "database_api.get_dynamic_global_properties",
+          "params": {
+          },
+          "id": 2
+          }' haf-instance:8090 || true
+      - curl -I haf-instance:8090 || (echo "error connecting to service haf-instance" && false)
+      - |
+          curl -XPOST -d '{
+          "jsonrpc": "2.0","method": "account_history_api.enum_virtual_ops",
+          "params": {"block_range_begin": 5000001, "block_range_end": 5000100},
+          "id": 4
+          }' $ENDPOINT || true
+  artifacts:
+    paths:
+    - "**/generated_during_*"
+    - "**/generated_by_package_fixtures"
+    reports:
+      junit: tests/live_sync/report.xml
+    when: always
+    expire_in: 1 week
+  interruptible: true
+  resource_group: ${CI_COMMIT_SHA}_mirrornet
+  tags:
+    - hive-builder-4
+
+
+python_live_sync_tests:
+  extends: .live_sync_tests
+
+  needs:
+    - !reference [.live_sync_tests, needs]
+    - job: prepare_python_hafah_image
+      artifacts: true
+
+  variables:
+    APP_IMAGE: $HAFAH_IMAGE_NAME
+  script:
+    - cd "$CI_PROJECT_DIR/tests/live_sync"
+    - pytest test_account_history_api.py
+
+postgrest_live_sync_tests:
+  extends: .live_sync_tests
+
+  needs:
+    - !reference [.live_sync_tests, needs]
+    - job: prepare_postgrest_hafah_image
+      artifacts: true
+
+  variables:
+    APP_IMAGE: $HAFAH_IMAGE_NAME
+  script:
+    - cd "$CI_PROJECT_DIR/tests/live_sync"
+    - pytest .
