--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,6 +23,7 @@ variables:
   DOCKER_DIND_TAG: "$CI_COMMON_JOB_VERSION"
   IMAGE_REMOVER_TAG: "$CI_COMMON_JOB_VERSION"
   TOX_IMAGE_TAG: "$CI_COMMON_JOB_VERSION"
+  HAFAH_BUILD_DIR: "$CI_PROJECT_DIR/build"
 
   # Variables specific to runner (there is single runner cache and there is 5m block_log available)
   DATA_CACHE_HIVE: /cache/replay_data_hafah_hived_${CI_PIPELINE_ID}
@@ -136,7 +137,7 @@ prepare_postgrest_hafah_image:
   stage: test
   variables:
     FF_NETWORK_PER_BUILD: 1
-    PYTHONPATH: "$CI_PROJECT_DIR/tests/test-tools/package"
+    PYTHONPATH: "$CI_PROJECT_DIR/haf/hive/tests/hive-local-tools/test-tools/package"
     APP_IMAGE: ""
     TEST_SUITE: "condenser_api_patterns/get_transaction and not get_transaction_hex or account_history_api or condenser_api_patterns/get_account_history or condenser_api_patterns/get_ops_in_block"
     DIRECT_HAFAH_CALLS: 0
@@ -221,7 +222,7 @@ new_style_postgrest_pattern_tests:
       artifacts: true
 
   script:
-    - pip3 install -r $CI_PROJECT_DIR/haf/hive/tests/api_tests/comparsion_tests/requirements.txt "$CI_PROJECT_DIR/tests/test-tools"
+    - pip3 install -r $CI_PROJECT_DIR/haf/hive/tests/api_tests/comparsion_tests/requirements.txt "$CI_PROJECT_DIR/haf/hive/tests/hive-local-tools/test-tools"
       # run comparsion tests
     - cd $CI_PROJECT_DIR/haf/hive/tests/api_tests/comparsion_tests
     - python3 -m pytest -n 8 --ref http://$HIVED_ENDPOINT --test http://$ENDPOINT --start 4900000 --stop 4915000 --junitxml=$CI_PROJECT_DIR/comparsion_tests.xml
@@ -269,7 +270,7 @@ postgrest_comparison_tests:
   variables:
     FF_NETWORK_PER_BUILD: 1
     API_FOR_TESTING: "account_history_api" # alternatively: blocks_api
-    PYTHONPATH: "$CI_PROJECT_DIR/tests/test-tools/package"
+    PYTHONPATH: "$CI_PROJECT_DIR/haf/hive/tests/hive-local-tools/test-tools/package"
     APP_IMAGE: ""
     HIVED_UID: $HIVED_UID
   needs:
@@ -277,7 +278,7 @@ postgrest_comparison_tests:
       artifacts: true
 
   script:
-      - /usr/bin/python3 $CI_PROJECT_DIR/tests/tests_api/benchmarks/benchmark.py -a app -p $APP_PORT -c perf_5M_heavy.csv -d $CI_PROJECT_DIR/wdir -n $API_FOR_TESTING
+      - /usr/bin/python3 $CI_PROJECT_DIR/tests/integration/hafah-local-tools/tests_api/benchmarks/benchmark.py -a app -p $APP_PORT -c perf_5M_heavy.csv -d $CI_PROJECT_DIR/wdir -n $API_FOR_TESTING
       - m2u --input wdir/raw_jmeter_report.xml --output wdir/jmeter_junit_report.xml
       - jmeter -g wdir/jmeter_${APP_PORT}_output.csv -o wdir/dashboard/
   artifacts:
@@ -337,5 +338,63 @@ build_and_publish_image:
   extends: .publish_docker_image_template
   script:
     - scripts/ci-helpers/build_and_publish_instance.sh
+  tags:
+    - public-runner-docker
+
+testnet_binaries:
+  stage: build #_and_test
+  image: "$CI_REGISTRY_IMAGE/ci-base-image@sha256:c3bfeee205b5ffffa3b5c5b1a4ebff19d1d15afe1e6d5f73efc2fd4a5d6dd632"
+  script:
+    - sudo -n chown -Rc haf_admin "$CI_PROJECT_DIR"
+    - $SETUP_SCRIPTS_PATH/build.sh --cmake-arg="-DHIVE_LINT=OFF" --haf-source-dir="$CI_PROJECT_DIR/haf" --haf-binaries-dir="$HAFAH_BUILD_DIR" --cmake-arg="-DBUILD_HIVE_TESTNET=ON" extension.hive_fork_manager hived cli_wallet get_dev_key compress_block_log
+  artifacts:
+    paths:
+    - "$CI_JOB_NAME"
+    expire_in: 6 hours
+  interruptible: true
+  tags:
+    - public-runner-docker
+    - hived
+
+.pytest_based:
+  before_script:
+    # - export PATH="/home/haf_admin/.local/bin:$PATH"
+    - curl -sSL https://install.python-poetry.org | python3 -  # install poetry in isolated environment
+    - python3 -m venv venv/
+    - . venv/bin/activate
+    - (cd $CI_PROJECT_DIR/haf/hive/tests/hive-local-tools && poetry install)
+    - (cd $CI_PROJECT_DIR/haf/tests/integration/haf-local-tools && poetry install)
+    - (cd $CI_PROJECT_DIR/tests/integration/hafah-local-tools && poetry install)
+
+hafah_integration_functional_tests:
+  stage: test
+  extends: .pytest_based
+  needs:
+    - job: testnet_binaries
+      artifacts: true
+  image: "$CI_REGISTRY_IMAGE/ci-base-image@sha256:c3bfeee205b5ffffa3b5c5b1a4ebff19d1d15afe1e6d5f73efc2fd4a5d6dd632"
+  variables:
+    HIVE_BUILD_ROOT_PATH: "$HAFAH_BUILD_DIR/haf/hive"
+  script:
+    # start postgres database and install extension
+    - sudo $SETUP_SCRIPTS_PATH/setup_postgres.sh --haf-admin-account=haf_admin --haf-binaries-dir="$HAFAH_BUILD_DIR"
+
+    # use newest libfaketime version, version 0.97 is not enough
+    - git clone --branch master https://github.com/wolfcw/libfaketime.git
+    - cd libfaketime && make
+    - export LIBFAKETIME_PATH=`pwd`/src/libfaketime.so.1
+
+    # prepare environment and run tests
+    - cd $CI_PROJECT_DIR/tests/integration/functional
+    - pytest --junitxml report.xml
+  artifacts:
+    paths:
+    - "**/generated_during_*"
+    - "**/generated_by_package_fixtures"
+    reports:
+      junit: tests/integration/functional/report.xml
+    when: always
+    expire_in: 1 week
+  interruptible: true
   tags:
     - public-runner-docker
