--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,7 +39,8 @@ prepare_hived_image:
     SUBMODULE_DIR: "$CI_PROJECT_DIR/haf/hive"
     REGISTRY_USER: "$HIVED_CI_IMGBUILDER_USER"
     REGISTRY_PASS: $HIVED_CI_IMGBUILDER_PASSWORD
-
+  before_script:
+    - git config --global --add safe.directory "*"
   tags:
     - public-runner-docker
     - hived-for-tests
@@ -51,7 +52,8 @@ prepare_haf_image:
     SUBMODULE_DIR: "$CI_PROJECT_DIR/haf"
     REGISTRY_USER: "$CI_IMG_BUILDER_USER"
     REGISTRY_PASS: $CI_IMG_BUILDER_PASSWORD
-
+  before_script:
+    - git config --global --add safe.directory "*"
   tags:
     - public-runner-docker
     - hived-for-tests
@@ -66,7 +68,7 @@ prepare_haf_image:
 
   script:
     - |
-      scripts/build_instance.sh
+      scripts/ci-helpers/build_instance.sh
       docker login -u "$HAFAH_CI_IMG_BUILDER_USER" -p "$HAFAH_CI_IMG_BUILDER_PASSWORD" "$REGISTRY"
       docker push "$HAFAH_IMAGE_NAME"
       echo "HAFAH_IMAGE_NAME=$HAFAH_IMAGE_NAME" > docker_image_name.env
@@ -288,7 +290,9 @@ publish_image:
     - job: prepare_postgrest_hafah_image
       artifacts: true
   script:
-    - scripts/publish_images.sh
+    - sed -i 85's/.*/# &/' scripts/ci-helpers/build_and_publish_instance.sh
+    - sed -i 97's/.*/# &/' scripts/ci-helpers/build_and_publish_instance.sh
+    - scripts/ci-helpers/build_and_publish_instance.sh
   tags:
     - public-runner-docker  
   rules:
