Replaced build_and_publish_instance.sh with a symbolic link - ref. hive#434

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,9 @@ variables:
   BENCHMARK_SOURCE_DIR: "$CI_PROJECT_DIR/haf/hive/tests/tests_api/benchmarks"
 
   # Variables required by Common CI jobs
-  CI_COMMON_JOB_VERSION: "656cd1670240c01fe05e56ee7158ea04877da555"
+  CI_COMMON_JOB_VERSION: "4dfc284c17837e642ea239e4e59764222e45d23a"
+  DOCKER_BUILDER_TAG: "$CI_COMMON_JOB_VERSION"
+  DOCKER_DIND_TAG: "$CI_COMMON_JOB_VERSION"
   IMAGE_REMOVER_TAG: "$CI_COMMON_JOB_VERSION"
   TOX_IMAGE_TAG: "$CI_COMMON_JOB_VERSION"
 
