--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,11 +18,7 @@ variables:
   BENCHMARK_SOURCE_DIR: "$CI_PROJECT_DIR/haf/hive/tests/tests_api/benchmarks"
 
   # Variables required by Common CI jobs
-  CI_COMMON_JOB_VERSION: "4dfc284c17837e642ea239e4e59764222e45d23a"
-  DOCKER_BUILDER_TAG: "$CI_COMMON_JOB_VERSION"
-  DOCKER_DIND_TAG: "$CI_COMMON_JOB_VERSION"
-  IMAGE_REMOVER_TAG: "$CI_COMMON_JOB_VERSION"
-  TOX_IMAGE_TAG: "$CI_COMMON_JOB_VERSION"
+  TOX_IMAGE_TAG: "34b0315587e9fade191a927b54856d039dac9c4b"
 
   # Variables specific to runner (there is single runner cache and there is 5m block_log available)
   DATA_CACHE_HIVE: /cache/replay_data_hafah_hived_${CI_PIPELINE_ID}
@@ -32,16 +28,10 @@ variables:
 include:
   - template: Workflows/Branch-Pipelines.gitlab-ci.yml
   - project: 'hive/haf'
-    ref: 677bd5b63ec807f279faf99a228cf743b39e6e9c
-    file: '/scripts/ci-helpers/prepare_data_image_job.yml'
-  - project: 'hive/hive'
-    ref: 5c3c086b285cab729e3e46dcec8bc0246d2d8f82
+    ref: 7d52319046375526badc926587c26ba0431f388d # develop
     file: '/scripts/ci-helpers/prepare_data_image_job.yml'
   - project: 'hive/common-ci-configuration'
-    ref: 4dfc284c17837e642ea239e4e59764222e45d23a # It seems a variable cannot be used here
-    file: '/templates/docker_image_jobs.gitlab-ci.yml'
-  - project: 'hive/common-ci-configuration'
-    ref: 4dfc284c17837e642ea239e4e59764222e45d23a # It seems a variable cannot be used here
+    ref: 34b0315587e9fade191a927b54856d039dac9c4b # It seems a variable cannot be used here
     file: '/templates/test_jobs.gitlab-ci.yml'
 
 prepare_hived_image:
