--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,14 +21,16 @@ variables:
   TOX_IMAGE_TAG: "59834935f116dce106fdf9fb98e44a6f646f5eba"
 
   # Variables specific to runner (there is single runner cache and there is 5m block_log available)
-  DATA_CACHE_HIVE: /cache/replay_data_hafah_hived_${CI_PIPELINE_ID}
-  DATA_CACHE_HAF: /cache/replay_data_hafah_haf_${CI_PIPELINE_ID}
+  DATA_CACHE_HIVE_TEMPLATE: /cache/replay_data_hafah_hived
+  DATA_CACHE_HAF_TEMPLATE: /cache/replay_data_hafah_haf
+  DATA_CACHE_HIVE: "/cache/replay_data_hafah_hive_${CI_PIPELINE_ID}"
+  DATA_CACHE_HAF: "/cache/replay_data_hafah_haf_${CI_PIPELINE_ID}"
   BLOCK_LOG_SOURCE_DIR_5M: /blockchain/block_log_5m
 
 include:
   - template: Workflows/Branch-Pipelines.gitlab-ci.yml
   - project: 'hive/haf'
-    ref: d533a7afbba53ecc7bb1030dbfa6c181bb899409 # develop
+    ref: c39e423fa50caf134356de467af8c6ea8170bc43 # develop
     file: '/scripts/ci-helpers/prepare_data_image_job.yml'
   - project: 'hive/common-ci-configuration'
     ref: 59834935f116dce106fdf9fb98e44a6f646f5eba # It seems a variable cannot be used here
@@ -53,9 +55,9 @@ prepare_hived_data:
   stage: build
   variables:
     SUBMODULE_DIR: "$CI_PROJECT_DIR/haf/hive"
-    DATA_CACHE: "$DATA_CACHE_HIVE"
     BLOCK_LOG_SOURCE_DIR: $BLOCK_LOG_SOURCE_DIR_5M
     CONFIG_INI_SOURCE: "$CI_PROJECT_DIR/haf/hive/docker/config_5M.ini"
+  resource_group: ${CI_COMMIT_SHA}
   tags:
     - hive-builder-4
 
@@ -78,9 +80,9 @@ prepare_haf_data:
   stage: build
   variables:
     SUBMODULE_DIR: "$CI_PROJECT_DIR/haf"
-    DATA_CACHE: $DATA_CACHE_HAF
     BLOCK_LOG_SOURCE_DIR: $BLOCK_LOG_SOURCE_DIR_5M
     CONFIG_INI_SOURCE: "$CI_PROJECT_DIR/haf/docker/config_5M.ini"
+  resource_group: ${CI_COMMIT_SHA}
   tags:
     - hive-builder-4
 
