--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,6 +21,7 @@ variables:
   TOX_IMAGE_TAG: "59834935f116dce106fdf9fb98e44a6f646f5eba"
   PYTEST_NUMBER_OF_PROCESSES: 8
   HAFAH_BUILD_DIR: "$CI_PROJECT_DIR/build"
+  BUILDER_IMAGE_PATH: "registry.gitlab.syncad.com/hive/haf/ci-base-image@sha256:b639fee3a6f7761a8e38777045e65bc012fbd2ad01bf366e5e9211ac765f9629"
 
   # Variables specific to runner (there is single runner cache and there is 5m block_log available)
   DATA_CACHE_HIVE_TEMPLATE: /cache/replay_data_hafah_hived
@@ -333,3 +334,77 @@ build_and_publish_image:
     - scripts/ci-helpers/build_and_publish_instance.sh
   tags:
     - public-runner-docker
+
+prepare_haf_image_testnet:
+  extends: .prepare_haf_image
+  stage: build
+  variables:
+    SUBMODULE_DIR: "$CI_PROJECT_DIR/haf"
+    REGISTRY_USER: "$CI_IMG_BUILDER_USER"
+    REGISTRY_PASS: $CI_IMG_BUILDER_PASSWORD
+    HIVE_NETWORK_TYPE: testnet
+    BINARY_CACHE_PATH: "haf-testnet-binaries"
+  tags:
+    - public-runner-docker
+    - hived-for-tests
+
+.hfm-only-service: &hfm-only-service
+  name: $HAF_IMAGE_NAME
+  alias: hfm-only-instance
+  variables:
+    # Allow access from any network to eliminate CI IP addressing problems when hfm runs as service
+    PG_ACCESS: |
+                "host    all              haf_admin        0.0.0.0/0    trust"
+                "host    all              haf_app_admin    0.0.0.0/0    trust"
+                "host    all              all              0.0.0.0/0    scram-sha-256"
+  command: ["--postgres"]
+
+.pytest_based:
+  before_script:
+    # - export PATH="/home/haf_admin/.local/bin:$PATH"
+    - curl -sSL https://install.python-poetry.org | python3 -  # install poetry in isolated environment
+    - python3 -m venv venv/
+    - . venv/bin/activate
+    - (cd $CI_PROJECT_DIR/haf/hive/tests/hive-local-tools && poetry install)
+    - (cd $CI_PROJECT_DIR/tests/integration/hafah-local-tools && poetry install)
+
+hafah_pytest_fuctional_tests:
+  stage: test
+  extends: .pytest_based
+  needs:
+    - job: prepare_haf_image_testnet
+      artifacts: true
+  image: $BUILDER_IMAGE_PATH
+  services:
+    - *hfm-only-service
+  variables:
+    BINARY_CACHE_PATH: "haf-testnet-binaries"
+    HIVED_PATH: "$CI_PROJECT_DIR/$BINARY_CACHE_PATH/hived"
+    COMPRESS_BLOCK_LOG_PATH: "$CI_PROJECT_DIR/$BINARY_CACHE_PATH/compress_block_log"
+    GET_DEV_KEY_PATH: "$CI_PROJECT_DIR/$BINARY_CACHE_PATH/get_dev_key"
+    CLI_WALLET_PATH: "$CI_PROJECT_DIR/$BINARY_CACHE_PATH/cli_wallet"
+    DB_NAME: haf_block_log
+    DB_URL: "postgresql://haf_admin@hfm-only-instance:5432/$DB_NAME"
+  script:
+    # setup postgres and DB for work with hafah
+    - $CI_PROJECT_DIR/scripts/setup_postgres.sh --postgres-url="$DB_URL"
+    - bash ${CI_PROJECT_DIR}/scripts/generate_version_sql.bash ${CI_PROJECT_DIR}
+    - $CI_PROJECT_DIR/scripts/setup_db.sh --postgres-url="$DB_URL"
+
+    # setup postgrest
+    - $CI_PROJECT_DIR/scripts/setup_postgrest.sh
+
+    # run tests
+    - cd $CI_PROJECT_DIR/tests/integration/functional
+    - pytest --junitxml report.xml -n ${PYTEST_NUMBER_OF_PROCESSES} --postgrest-hafah-path=/usr/local/bin/postgrest
+  artifacts:
+    paths:
+    - "**/generated_during_*"
+    - "**/generated_by_package_fixtures"
+    reports:
+      junit: tests/integration/system/haf/report.xml
+    when: always
+    expire_in: 1 week
+  interruptible: true
+  tags:
+    - hived-for-tests
