--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -423,3 +423,23 @@ hafah_pytest_fuctional_tests:
   interruptible: true
   tags:
     - hived-for-tests
+
+docker_tests:
+  stage: build
+  services:
+    - name: registry.gitlab.syncad.com/hive/common-ci-configuration/docker-dind:${DOCKER_DIND_TAG}
+      alias: docker
+  script:
+    - ls -la
+    - docker context ls
+  artifacts:
+    paths:
+    - "**/generated_during_*"
+    - "**/generated_by_package_fixtures"
+    reports:
+      junit: tests/integration/system/haf/report.xml
+    when: always
+    expire_in: 1 week
+  interruptible: true
+  tags:
+    - hived-for-tests
