--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -396,6 +396,7 @@ hafah_pytest_fuctional_tests:
     DB_URL: "postgresql://haf_admin@hfm-only-instance:5432/$DB_NAME"
     HAFAH_IMAGE_NAME: $CI_REGISTRY_IMAGE/instance:instance-$HAFAH_IMAGE_TAG
   script:
+    - docker context ls
     - ls -la
     - cd /builds/hive/HAfAH
     - ls -la
